# coq-record-update-plugin

./: .gitignore  .travis.yml  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-record-update-plugin.opam  dune  dune-project  meta.yml  test-normalizer.sed
.github/workflows/: coq-action.yml
src/: eta_expansion.ml  eta_expansion.mli  g_record_update.mlg  tuto1_plugin.mlpack
tests/: Demo.ref  Demo.v  GenericFieldAPI.v
theories/: Demo.v  EtaExpansion.v  Loader.v  RecordUpdatePlugin.v
